Add team page and update index
* Creating team page with "Officers" and "Board" sections;
* Adding "Officer & Board" section to index;
* Refactoring Grid component;

--- a/app/styles/components/_background.scss
+++ b/app/styles/components/_background.scss
@@ -17,6 +17,7 @@ $background-z-index: -1;
   width: 100%;
   background-size: cover;
   background-position: 0%;
+  background-repeat: no-repeat;
 }
 
 .BackgroundColumn--rightAlign {
