--- a/app/styles/components/base.scss
+++ b/app/styles/components/base.scss
@@ -6,6 +6,7 @@
 @import 'hero';
 @import 'inputs';
 @import 'logo';
+@import 'logo-lighthouse';
 @import 'nav';
 @import 'overlay';
 @import 'panel';
