--- a/app/styles/components/_panel.scss
+++ b/app/styles/components/_panel.scss
@@ -11,6 +11,7 @@ $panel-content-max-width: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
 
   padding: $Theme-margin-large $Theme-margin-half;
 
