--- a/app/styles/components/_nav.scss
+++ b/app/styles/components/_nav.scss
@@ -77,6 +77,32 @@ $nav-break-mobile: 798px;
   background-image: url('../images/hamburger@2x.png');
 }
 
+.Nav.Nav--onTopIndex {
+  background: none;
+  box-shadow: none;
+  justify-content: flex-end;
+
+  .Nav-logo {
+    display: none;
+  }
+
+  .Nav-link {
+    color: $Theme-color-white;
+
+    &:hover {
+      color: $Theme-color-blue;
+
+      transition: color 0.4s;
+    }
+  }
+
+  .Nav-burger {
+    background-image: url('../images/hamburger_white@2x.png');
+  }
+
+  transition: all 0.6s;
+}
+
 .Nav.Nav--onTop {
   background: none;
   box-shadow: none;
@@ -84,7 +110,6 @@ $nav-break-mobile: 798px;
   .Nav-logo {
     background-image: url('../images/logo@2x.png');
   }
-
   .Nav-link {
     color: $Theme-color-white;
 
